Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4777

Plugin message asserts on error response.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Management API
    • None

    Description

      (gdb) where
      #0  0x00007ffff5d5fc37 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #1  0x00007ffff5d63028 in __GI_abort () at abort.c:89
      #2  0x00007ffff7bb4c54 in ink_abort (message_format=0x7ffff7bc6f8c "%s:%d: failed assertion `%s`")
          at ink_error.cc:79
      #3  0x00007ffff7bb25ea in _ink_assert (expression=0x55ce60 "responses[optype].nfields == 3",
          file=0x55ce00 "NetworkMessage.cc", line=237) at ink_assert.cc:37
      #4  0x000000000045a2a9 in send_mgmt_error (fd=14, optype=LIFECYCLE_MESSAGE,
          error=TS_ERR_PERMISSION_DENIED) at NetworkMessage.cc:237
      #5  0x000000000044dc03 in handle_control_message (fd=14, req=0x7fffe4004bd0, reqlen=45)
          at TSControlMain.cc:1239
      #6  0x000000000044c31f in ts_ctrl_main (arg=0x7fffffffe0b8) at TSControlMain.cc:217
      #7  0x00007ffff6904184 in start_thread (arg=0x7ffff2c8d700) at pthread_create.c:312
      #8  0x00007ffff5e2337d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      (gdb) up
      #5  0x000000000044dc03 in handle_control_message (fd=14, req=0x7fffe4004bd0, reqlen=45)
          at TSControlMain.cc:1239
      1239   	        return send_mgmt_error(fd, optype, TS_ERR_PERMISSION_DENIED);
      

      The lifecycle message response has 1 parameter, not 3.

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m