TS-4777: Correct lifecycle message response parameter count.